# runpod-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: auto-release.yml  check-version-bump.yml  test.yml
runpod_cli/: __init__.py  __main__.py  cli.py  client.py  config.py
tests/: test_smoke.py
